--- a/.env
+++ b/.env
@@ -5,3 +5,4 @@ DB_PORT="5432"
 HOST="localhost"
 DB_HOST = "localhost"
 DB_PASSWORD= "1230"
+REACT_APP_API_KEY="AIzaSyDclWfFnp7AQpJjZQj7E9fsD7j6M9vPhTk"
