--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,9 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
+    "google-maps-react": "^2.0.6",
+    "i": "^0.3.6",
+    "npm": "^7.21.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
