--- a/client/.gitignore
+++ b/client/.gitignore
@@ -4,6 +4,10 @@
 /node_modules
 /.pnp
 .pnp.js
+client/package-lock.json
+client/package.json
+api2/package-lock.json
+api2/package-lock.json
 
 # testing
 /coverage
