--- a/api2/package.json
+++ b/api2/package.json
@@ -16,9 +16,11 @@
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "express-jwt": "^6.1.0",
     "express-validator": "^6.12.1",
     "joi": "^17.4.2",
     "jsonwebtoken": "^8.5.1",
+    "jwks-rsa": "^2.0.4",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.12",
     "pg": "^8.7.1",
