--- a/api2/package.json
+++ b/api2/package.json
@@ -11,13 +11,18 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.21.2",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "express-jwt": "^6.1.0",
     "express-validator": "^6.12.1",
+    "joi": "^17.4.2",
     "jsonwebtoken": "^8.5.1",
+    "jwks-rsa": "^2.0.4",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.6.3",
     "nodemon": "^2.0.12",
     "pg": "^8.7.1",
     "pg-hstore": "^2.3.4",
