mail pdf y .env.example

--- a/api2/.env.example
+++ b/api2/.env.example
@@ -11,3 +11,5 @@ AUTH0_DOMAIN=https://dev-6p6fqhbe.us.auth0.com
 AUTH0_CLIENT_SECRET=8Ic1t1w4GDGr7cS7gh_hyEQoFd2KeWg2WUFW5ydRNVtf5cpxb7BHbX2f6cKjOAJm
 AUTH0_USER_DATA_BASE_NAME=Username-Password-Authentication
 AUTH0_AUDIENCE = https://dev-6p6fqhbe.us.auth0.com/api/v2/
+GMAIL = womanforwoman15@gmail.com
+PASS_GMAIL = Henry2021
