estilos y chakra, y .env

--- a/.env
+++ b/.env
@@ -1,8 +1,9 @@
-PORT=3001
+PORT=3000
 DB_NAME="women4women"
 DB_USER="postgres"
 DB_PORT="5432"
 HOST="localhost"
 DB_HOST = "localhost"
-DB_PASSWORD= "1230"
+DB_PASSWORD= "postgres"
 REACT_APP_API_KEY="AIzaSyDclWfFnp7AQpJjZQj7E9fsD7j6M9vPhTk"
+BACK_BASE_URL = http://localhost:3001
