--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
-PORT=3000
-DB_NAME="women4women"
-DB_USER="postgres"
-DB_PORT="5432"
-HOST="localhost"
-DB_HOST = "localhost"
-DB_PASSWORD= "postgres"
+REACT_APP_PORT=3000
+REACT_APP_DB_NAME="women4women"
+REACT_APP_DB_USER="postgres"
+REACT_APP_DB_PORT="5432"
+REACT_APP_HOST="localhost"
+REACT_APP_DB_HOST = "localhost"
+REACT_APP_DB_PASSWORD= "1230"
 REACT_APP_API_KEY="AIzaSyDclWfFnp7AQpJjZQj7E9fsD7j6M9vPhTk"
-BACK_BASE_URL = http://localhost:3001
+REACT_APP_BACK_BASE_URL = http://localhost:3001
