--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.3.0",
     "simple-react-google-maps": "^1.1.2",
+    "sweetalert": "^2.1.2",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
