--- a/client/package.json
+++ b/client/package.json
@@ -14,9 +14,12 @@
     "framer-motion": "^4.1.17",
     "google-maps-react": "^2.0.6",
     "react": "^17.0.2",
+    "react-addons": "^0.9.1-deprecated",
     "react-dom": "^17.0.2",
     "react-google-login": "^5.2.2",
     "react-google-maps": "^9.4.5",
+    "react-icons": "^4.2.0",
+    "react-pro-sidebar": "^0.6.0",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.1",
     "react-scripts": "^4.0.3",
