--- a/api2/package.json
+++ b/api2/package.json
@@ -22,6 +22,7 @@
     "jsonwebtoken": "^8.5.1",
     "jwks-rsa": "^2.0.4",
     "morgan": "^1.10.0",
+    "multer": "^1.4.3",
     "nodemailer": "^6.6.3",
     "nodemon": "^2.0.12",
     "pg": "^8.7.1",
