--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "react-icons": "^4.2.0",
     "react-pro-sidebar": "^0.6.0",
     "react-redux": "^7.2.4",
+    "react-reveal": "^1.2.2",
     "react-router-dom": "^5.2.1",
     "react-scripts": "^4.0.3",
     "redux": "^4.1.1",
