--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "react-google-login": "^5.2.2",
     "react-google-maps": "^9.4.5",
     "react-icons": "^4.2.0",
+    "react-multi-carousel": "^2.6.5",
     "react-pro-sidebar": "^0.6.0",
     "react-redux": "^7.2.4",
     "react-reveal": "^1.2.2",
