--- a/client/package.json
+++ b/client/package.json
@@ -13,12 +13,14 @@
     "dotenv": "^10.0.0",
     "framer-motion": "^4.1.17",
     "google-maps-react": "^2.0.6",
+    "infinite-react-carousel": "^1.2.11",
     "react": "^17.0.2",
     "react-addons": "^0.9.1-deprecated",
     "react-dom": "^17.0.2",
     "react-google-login": "^5.2.2",
     "react-google-maps": "^9.4.5",
     "react-icons": "^4.2.0",
+    "react-multi-carousel": "^2.6.5",
     "react-pro-sidebar": "^0.6.0",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.1",
