--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "dotenv": "^10.0.0",
     "framer-motion": "^4.1.17",
     "google-maps-react": "^2.0.6",
+    "infinite-react-carousel": "^1.2.11",
     "react": "^17.0.2",
     "react-addons": "^0.9.1-deprecated",
     "react-dom": "^17.0.2",
