--- a/api2/package.json
+++ b/api2/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.997.0",
     "axios": "^0.21.2",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
